Added the MapStruct library
- Added mappers for mapping the user object to UserResult and AuthResult.